--- a/src/stylesheets/PokeList.scss
+++ b/src/stylesheets/PokeList.scss
@@ -1,3 +1,15 @@
+.contentTitle{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.pokeball {
+    width: 30px;
+    height: 30px;
+    margin: 20px;
+}
+
 .title {
     text-align: center;
     font-weight: 900;
