--- a/src/stylesheets/PokeList.scss
+++ b/src/stylesheets/PokeList.scss
@@ -17,13 +17,12 @@
 }
 
 .contentCards {
-    max-width: 1200px;
+    max-width: 1300px;
     margin: auto;
     padding: 20px;
     align-items: center;
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-column-gap: 20px;
-    grid-row-gap: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 
 }
