--- a/src/stylesheets/Pokemon.scss
+++ b/src/stylesheets/Pokemon.scss
@@ -1,4 +1,5 @@
 .cardPokemon{
+    margin: 20px;
     border: 1px solid rgb(245, 212, 105);
     background-color: rgb(252, 248, 241);
     width: 200px;
